--- a/config/application.yml
+++ b/config/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: prenotazione_service
   datasource:
-    url: jdbc:h2:~/albergo
+    url: jdbc:h2:tcp://localhost:9092/~/albergo
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -17,5 +17,6 @@ spring:
       enabled: true
 
 server:
+  port: 8081
   servlet:
     context-path: /api
