fixing metodi richiediPreventivo e prenota in PrenotazioneServiceImpl, aggiunto flag "prenotato" a Preventivo entity e aggiornate le ddl di conseguenza

--- a/config/application.yml
+++ b/config/application.yml
@@ -36,3 +36,8 @@ external-call:
   name:
     hotel: hotel
     user: user
+
+internal:
+  validation:
+    ChronologicalDates:
+      errorMessage: Data non valida
