--- a/config/application.yml
+++ b/config/application.yml
@@ -31,7 +31,7 @@ external-call:
   user:
     util:
       url: http://localhost:8083/api/util
-      checkUtente: /checkUtente
+      checkUtente: /check-utente
 
   name:
     hotel: hotel
